Fix styling issues and component overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,7 @@
-#root {
+html,
+body,
+#root,
+#root > div {
 	/*max-width: 1280px;*/
 	margin: 0;
 	box-sizing: border-box;
@@ -8,7 +11,6 @@
 
 .gameBody {
 	background-color: #373737;
-	height: 100vh;
 	width: 100%;
 }
 
@@ -24,9 +26,10 @@
 .cardsInPlay {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
-	height: 100vh;
-	flex: 1;
+	justify-content: space-evenly;
+	gap: 40px;
+	height: 100%;
+	flex: 2;
 }
 
 .cardsInHand {
@@ -84,8 +87,8 @@
 	border: 1px solid #e0e0e0;
 	border-radius: 4px;
 	background-color: #fff;
-	width: 168px;
-	height: 245px;
+	width: 10vw;
+	height: calc(10vw * 1.4);
 	font-size: 1.25rem;
 
 	&.selected {
@@ -104,7 +107,6 @@
 }
 
 .gamble-cards {
-	position: absolute;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
